# grimoire.nvim

./: .envrc  .gitignore  build.lua  flake.nix  init.py  pyproject.toml  requirements.txt
lua/grimoire/: init.lua
rplugin/python3/: grimoire_nvim.py  grimoire_plugin.py
src/grimoire/: completion.py  context.py  keymap.py  namespace.py  plugin.py
